docs: rewrite 10 placeholder docs as deep-dive articles
Rewrote 10 documentation files from short placeholders (180-340 lines)
into comprehensive deep-dive articles (430-610+ lines each) following
the hashmap-deep-dive writing style:

- core-concepts/topics-partitions.md: Log segments, index files, zero-copy, page cache, log compaction
- core-concepts/producers.md: RecordAccumulator, Sender thread, batching, BufferPool, idempotency
- core-concepts/brokers-cluster.md: Request pipeline, Purgatory, Controller, KRaft, ISR, leader election
- core-concepts/consumer-groups.md: Group Coordinator, rebalance protocol, cooperative sticky, static membership
- producers-consumers/exactly-once.md: Transactions, 2PC, zombie fencing, transaction markers
- producers-consumers/producer-api.md: KafkaTemplate, 4 send patterns, transactional, ReplyingTemplate
- operations/performance-tuning.md: Bottleneck diagnosis, producer/consumer/broker/OS/JVM tuning
- streams/streams-overview.md: Topology DAG, RocksDB state stores, windowing, exactly-once, threading
- fundamentals/kafka-overview.md: Distributed commit log, CAP theorem, event-driven architecture
- fundamentals/kafka-vs-others.md: Kafka vs RabbitMQ/Pulsar/SQS/Redis/NATS comparison

Each article features:
- Real-world problem scenario opening (Bối cảnh)
- 15 sections with advanced internals explanation
- Mermaid diagrams and ASCII architecture art
- Comparison tables and config examples
- Callout blocks (IMPORTANT, WARNING, NOTE, TIP)
- Cheat sheet summary

All content in Vietnamese (technical terms in English).

Co-Authored-By: Hiệp Bá <vanhiep99w@gmail.com>